--- a/latex/partie2.tex
+++ b/latex/partie2.tex
@@ -1,6 +1,6 @@
 Pour diriger et faciliter l'évolution du projet, un certain nombre d'outils et de méthodes ont été mis en place au début du projet.
 L'environnement avait pour but de permettre un développement agile.
-On peut distinguer 3 parties, la gestion du projet, la gestion des sources et les outils de développements.
+On peut distinguer 3 parties : la gestion du projet, la gestion des sources et les outils de développements.
 \section{Planification et gestion de projet}
 La méthode agile préconise des itérations courtes avec des objectifs clairs et concis à réaliser à chaque itération.
 A chaque itération, un point est fait avec le client pour définir les objectifs pour la prochaine itération, le client ici étant notre tuteur, Julien Ponge.
@@ -16,7 +16,7 @@ On peut distinguer deux entités principales, les tickets et les sprints.
 \end{figure}
 \subsection{Ticket}
 Les Tickets représentent un objectif à réaliser.
-Ils peuvent être crées par n'importe quel participant au projet. 
+Ils peuvent être crées par n'importe quel participant au projet.
 Ce ticket peut ensuite être assigner à une personne et possède plusieurs états comme vu sur la figure~\ref{fig:workflow}.
 \begin{figure}[H]
 	\centering
@@ -30,6 +30,8 @@ Un sprint est un ensemble de tickets à résoudre pour une date donnée.
 Il correspond à une itération dans la méthodologie agile.
 Pour le projet, la durée d'un sprint était généralement de 1 ou 2 semaines.
 A chaque fin de sprint, une réunion était organisée pour discuter des résultats, des reports à effectuer ou des objectifs à réaliser pour le prochains sprint.
+
+% ----------------------------------------------------
 \section{Gestionnaire des sources}
 \subsection{Gestionnaire de versions}
 Tout projet informatique conséquent se doit d'être sous gestionnaire de version.
@@ -69,7 +71,7 @@ GitHub est une plateforme collaborative hébergeant des dépôts Git.
 Cette plateforme permet de créer, dupliquer, supprimer ou consulter des dépôts Git.
 Toutes les réalisations faites sont ouvertes et disponibles à tout le monde, c'est à dire que n'importe qui est libre de consulter, cloner ou de forker les projets présents sur GitHub.
 Le droit de commit est cependant restreint aux utilisateurs choisies.
-Cette plateforme a été choisi par Julien Ponge pour héberger son dépôt Git.
+Cette plateforme a été choisie par Julien Ponge pour héberger son dépôt Git.
 Nous nous sommes donc créés des comptes sur GitHub et l'avons forké.
 L'utilisation d'un dépôt public basé sur celui de Julien Ponge a permis non seulement de faciliter les mises à jour, mais également de lui permettre de suivre facilement notre travail.
 %- GitHub : Gestionnaire de dépôt Git
@@ -98,6 +100,6 @@ De plus, ses capacités de modification de code (refactoring) sont au dessus de 
 %Profiler Java
 %-> Temps, nombres d'appels des méthodes
 %-> Affichage de la charge a tout moment
-Yourkit est un outil de profiling. Il permet d'avoir un rapport détaillé sur l'utilisation des ressources par le programmes. On peut ainsi récupérer le nombre d'appel à une méthode, le temps passé dans une méthode, l'utilisation des ressources à un temps donné.
+Yourkit est un outil de profiling. Il permet d'avoir un rapport détaillé sur l'utilisation des ressources par le programme. On peut ainsi récupérer le nombre d'appel à une méthode, le temps passé dans une méthode, l'utilisation des ressources à un temps donné.
 
 Le but du profiling a été de repérer les optimisations possibles sur les modifications que l'on a opéré.
